<resources>
    <string name="app_name">Albatros</string>
    <string name="title_activity_apertura_caja">apertura_caja</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ing_efe">Ingresar efectivo a Caja</string>
    <string name="ret_efe">Retirar efectivo a Caja</string>
    <string name="cerrar_caja">Cerrar Caja</string>
    <string name="consultar_caja">Consultar Caja</string>

    <string name="abordar">Check-In</string>
    <string name="detalle_barco">Ver detalles</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_show">No Show</string>
    <string name="upgrade">Upgrade</string>
    <string name="muelle">Pago Muelle</string>

    <string name="list_caja_prompt">Caja</string>
    <string name="list_t_arqueo">Tipo Arqueo</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="asignar">ASIGNAR</string>
    <string name="agregar_brazalete">Agregar Brazalete</string>
    <string name="folio_de_brazalete">Folio de brazalete</string>
    <string name="productos" />
    <string name="formas_de_pago" />
    <string name="comprobante" />

    <string-array name="caja_array">
        <item>Elemento 1</item>
        <item>Elemento 2</item>
        <item>Elemento 3</item>
        <item>Elemento 4</item>
        <item>Elemento 5</item>
    </string-array>
    <string-array name="options">
        <item>Ingresar efectivo a Caja</item>
        <item>Retirar efectivo a Caja</item>
        <item>Cerrar Caja</item>
        <item>Elemento 4</item>
        <item>Elemento 5</item>
    </string-array>
    <string-array name="arqueo_array">
        <item>Elemento 1</item>
        <item>Elemento 2</item>
        <item>Elemento 3</item>
        <item>Elemento 4</item>
        <item>Elemento 5</item>
    </string-array>
    <string-array name="moneda_array">
        <item>Moneda</item>
        <item>Elemento 2</item>
        <item>Elemento 3</item>
        <item>Elemento 4</item>
        <item>Elemento 5</item>
    </string-array>
    <string-array name="billete_array">
        <item>Billete</item>
        <item>Elemento 2</item>
        <item>Elemento 3</item>
        <item>Elemento 4</item>
        <item>Elemento 5</item>
    </string-array>
</resources>
