<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/abordar"
        android:orderInCategory="100"
        android:title="@string/abordar"
        app:showAsAction="never" />
    <item
        android:id="@+id/cancelar"
        android:orderInCategory="100"
        android:title="@string/cancelar"
        app:showAsAction="never" />
    <item
        android:id="@+id/no_show"
        android:orderInCategory="100"
        android:title="@string/no_show"
        app:showAsAction="never" />
    <item
        android:id="@+id/upgrade"
        android:orderInCategory="100"
        android:title="@string/upgrade"
        app:showAsAction="never" />
    <item
        android:id="@+id/muelle"
        android:orderInCategory="100"
        android:title="@string/muelle"
        app:showAsAction="never" />

</menu>